ActionItem138: notice and wrap height fix
git-svn-id: https://svn.colivre.coop.br/svn/noosfero/trunk@1091 3f533792-8f58-4932-b0fe-aaf55b0a4547

--- a/public/designs/templates/default/stylesheets/forms.css
+++ b/public/designs/templates/default/stylesheets/forms.css
@@ -13,10 +13,10 @@
 .formfield.text_field input,
 .formfield.password_field input,
 .formfield textarea {
-  background: transparent url("../images/input-bg.gif") top left no-repeat;
+/*  background: transparent url("../images/input-bg.gif") top left no-repeat; */
   border: 1px solid #999;
-  border-top: none;
-  border-left: none;
+/*  border-top: none;
+  border-left: none; */
   color: #585858;
 }
 .formfield input {
@@ -32,6 +32,7 @@
 
 .submit {
   border: 1px solid #777;
+  cursor: pointer;
   color: #505050;
   background: #BBB url("../images/bt-bg.png") top left repeat-x;
   padding: 0px 30px;
