--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -4,13 +4,12 @@ padding: 0px;
 }
 
 #notice {
-position: absolute;
-margin-top: 10px;
-right: 10px;
-background: #ffffa9;
-padding: 10px;
-border: 3px solid #dfdfdf;
-z-index: 9999 !important ;
+cursor: pointer;
+} 
+
+#wrap {
+height: 100%;
+margin:0px;
 }
 
 a img {
@@ -54,7 +53,6 @@ div#errorExplanation h2 {
   margin-top: -5px;
   margin-left: -5px;
   margin-right: -5px;
-
   padding: 3px;
   background: #933;
   color: white;
